--- a/products.html
+++ b/products.html
@@ -43,6 +43,7 @@ header {
   top: 0;
   z-index: 1000;
   box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  min-height: 140px; /* ارتفاع إضافي */
 }
 
 .header-buttons {
@@ -52,6 +53,7 @@ header {
    justify-content: center;
    gap: 5px;
    position: relative;
+   z-index: 1001; /* تأكد من ظهورها */
 }
 .header-buttons button {
   background: var(--secondary-color);
@@ -136,7 +138,7 @@ header {
 /* تحسينات شريط التصنيفات لجعله أكثر ثباتاً */
 .categories-container {
   position: sticky;
-  top: 120px;
+  top: 180px; /* زيادة المسافة من الأعلى */
   z-index: 999;
   background: white;
   border-bottom: 1px solid #ddd;
@@ -654,6 +656,7 @@ header {
   gap: 8px;
   margin: 10px 0;
   padding: 0 5px;
+  z-index: 1001; /* تأكد من ظهوره */
 }
 
 #searchBox {
@@ -712,7 +715,7 @@ header {
   cursor: pointer;
   font-weight: bold;
   font-size: 16px;
-  z-index: 999;
+  z-index: 1002; /* زيادة قيمة z-index */
   display: flex;
   align-items: center;
   gap: 5px;
@@ -1050,7 +1053,11 @@ header {
   }
   
   .categories-container {
-    top: 110px;
+    top: 160px; /* تعديل للموبايل */
+  }
+  
+  header {
+    min-height: 160px; /* زيادة الارتفاع في الموبايل */
   }
   
   /* تحسينات إضافية للشاشات الصغيرة */
@@ -1097,6 +1104,14 @@ header {
   .category-btn {
     padding: 6px 12px;
     font-size: 12px;
+  }
+  
+  .categories-container {
+    top: 170px;
+  }
+  
+  header {
+    min-height: 180px; /* زيادة أكبر للشاشات الصغيرة */
   }
   
   /* تحسينات إضافية للشاشات الصغيرة جداً */
@@ -1297,7 +1312,7 @@ header {
 /* شريط المنتجات الجديدة المثبت */
 .new-products-sticky-bar {
   position: sticky;
-  top: 170px;
+  top: 230px; /* زيادة المسافة */
   background: linear-gradient(135deg, #ff4444, #cc0000);
   color: white;
   padding: 8px 15px;
@@ -1318,7 +1333,7 @@ header {
 /* شريط العروض المتحرك - تم تعديل موقعه */
 .moving-offer-bar {
   position: sticky;
-  top: 200px;
+  top: 260px; /* زيادة المسافة */
   background: linear-gradient(135deg, #ff6600, #ff3300);
   color: white;
   padding: 8px 12px;
@@ -1492,6 +1507,8 @@ header {
   margin: 10px 0;
   padding: 0 5px;
   flex-wrap: wrap;
+  position: relative;
+  z-index: 1001; /* تأكد من ظهورها فوق العناصر الأخرى */
 }
 
 /* تحسينات تعديل الكمية في الفاتورة */
@@ -1677,7 +1694,7 @@ img {
 /* شريط الإشعارات الجانبي */
 .notifications-sidebar {
   position: fixed;
-  top: 140px;
+  top: 150px; /* تعديل الموقع */
   left: 10px;
   z-index: 996;
   display: flex;
@@ -2772,6 +2789,32 @@ async function checkForUpdatesInBackground() {
   }
 }
 
+// دالة لمراقبة ظهور الأزرار وإعادة تثبيتها إذا لزم الأمر
+function ensureButtonsVisibility() {
+  const headerButtons = document.querySelector('.header-buttons');
+  const additionalButtons = document.querySelector('.additional-buttons');
+  const searchContainer = document.querySelector('.search-container');
+  
+  // تأكد من ظهور العناصر
+  [headerButtons, additionalButtons, searchContainer].forEach(element => {
+    if (element) {
+      element.style.display = 'flex';
+      element.style.visibility = 'visible';
+      element.style.opacity = '1';
+      element.style.zIndex = '1001';
+    }
+  });
+  
+  // تأكد من ظهور زر حفظ السلة
+  const saveCartBtn = document.getElementById('saveCartBtn');
+  if (saveCartBtn) {
+    saveCartBtn.style.display = 'flex';
+    saveCartBtn.style.visibility = 'visible';
+    saveCartBtn.style.opacity = '1';
+    saveCartBtn.style.zIndex = '1002';
+  }
+}
+
 // تهيئة نظام التحديث التلقائي
 function initializeAutoUpdateSystem() {
   // تحديث المنتجات كل 60 ثانية (دقيقة واحدة)
@@ -2782,6 +2825,9 @@ function initializeAutoUpdateSystem() {
   
   // إخفاء العداد في البداية
   document.getElementById('update-count').style.display = 'none';
+  
+  // تشغيل الدالة بشكل دوري لضمان ظهور الأزرار
+  setInterval(ensureButtonsVisibility, 1000);
 }
 
 // دالة محسنة لعرض الفاتورة مع إعادة التنظيم إلى الشكل الأصلي
@@ -3096,6 +3142,9 @@ function performSearch() {
   }
   
   renderProducts(filtered, container);
+  
+  // تأكد من ظهور الأزرار بعد البحث
+  ensureButtonsVisibility();
 }
 
 // دالة لعرض اقتراحات البحث
@@ -3251,6 +3300,9 @@ document.addEventListener('DOMContentLoaded', function() {
     categoriesContainer.style.visibility = 'visible';
     categoriesContainer.style.opacity = '1';
   }
+  
+  // تشغيل دالة ضمان ظهور الأزرار فوراً
+  ensureButtonsVisibility();
 });
 </script>
 </body>
