--- a/products.html
+++ b/products.html
@@ -1469,7 +1469,7 @@ header {
       <button id="cancelPassword" onclick="closePasswordModal()">إلغاء</button>
     </div>
     <div class="password-support">
-      <p>إذا أردت كلمة السر</p>
+      <p>إتم اخفاء الاسعار حفاظا علي سرية الاسعار والعروض الخاصة بعملائنا اذا أردت كلمة السر</p>
       <a href="https://wa.me/201022495795" target="_blank">☎️  تواصل مع الدعم الفني نزداد شرف</a>
     </div>
   </div>
@@ -2710,3 +2710,4 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
